cluster/apps/daybook/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: daybook
    app.kubernetes.io/version: 0ca65ba
  name: daybook
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: daybook
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: daybook
        app.kubernetes.io/version: 0ca65ba
    spec:
      imagePullSecrets:
      - name: forgejo-registry-secret
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: code.netbird.nathalie-stiefsohn.eu/my-homelab/daybook:0ca65ba@sha256:e2e6aac9341bc5148631461426e371a452d6ce66ae7d0c80818ea4374c9f6d0e
        name: daybook
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /var/lib/daybook
          name: data-volume
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: daybook-data-pvc
      securityContext:
        seccompProfile:
          type: RuntimeDefault
